# nasa_space_apps_2025

./: .gitignore  README.md  app_gui.py  requirements.txt
backend/: README.md  data_simulator.py  debug_check_merra2.py  env.yml  main.py  nasa_auth.py  nasa_data_fetcher.py  offline_merra2.nc4  pyproject.toml  requirements.txt  smoke_nasa.py  test_netrc.py
backend/app/: main.py
docs/: API.md  Compliance.md  DataSources.md  submission_requirements.md
frontend/: README.md
infra/: .env.example  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
scripts/: setup_dev.sh  setup_windows.ps1
